--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -72,6 +72,19 @@
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
+   <widget class="QSlider" name="progress_slider">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>460</y>
+      <width>341</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
