显示歌曲信息

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,6 +98,19 @@
      <string>打开</string>
     </property>
    </widget>
+   <widget class="QLabel" name="song_label">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>190</y>
+      <width>211</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
